add libbpf-moa as build-dep

--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,8 @@ Build-Depends:
   lshw,
   pciutils,
   zlib1g-dev,
-  libpcap-dev
+  libpcap-dev,
+  libbpf-moa
 Homepage: https://github.com/tbarbette/fastclick
 
 Package: fastclick
